[package]
name = "fft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
num = "0.4"
rayon = "1.1"
actix-web = "4.0"
actix-files = "0.6.5"
serde = "1.0.198"
# NOTE: proc-macro2 1.0.81 conflict with current nightly version
# TODO: Delete this after rustc upgraded.
proc-macro2 = "=1.0.79"
